app/assets/stylesheets/application/alonetone.css.scss
/* ... */
// uploading
.uploader {
  form {
    #filefields {
      li {
        list-style: none;
      }
    }
  }
  .uploading {
    width: 100%;
    height: 100px;
    text-align: center;
    font-size: 18px;
    font-weight: bold;
  }
}

// sign up
#what-you-get {
  background-color: #f3f3f3;
  h2 {
    color: $text_color;
    font-size: 14px;
    margin-bottom: 30px;
    text-shadow: none;
  }
}

// static content

.static_content {
  padding: 15px 25px;
  background: #e1e2e1;
  line-height: 18px;
  margin-bottom: 1px;
  p {
    color: $text_color;
    a, a:visited {
      color: $text_color;
    }
  }
}

.sidebar {
  float: right;
  ul {
    list-style: none;
    li {
      list-style: none;
      list-style-position: outside;
      margin: 0px 0px 13px 3px;
      font-weight: normal;
      font-size: 12px;
      line-height: 14px;
      a, a:visited {
        font-weight: normal;
        font-size: 12px;
        line-height: 14px;
      }
    }
  }
}

#alonetoner_big {
  margin-bottom: 40px;
}

// recent listeners
#recent_listeners {
  div {
    float: left;
    margin-right: 24px;
  }
  height: 60px;
}

#follows,#mostly_listens_to {
  padding-bottom: 0px;
  margin-bottom: -10px;
  padding-right: 0px;
  div {
    float: left;
    margin-bottom: 10px;
    margin-top: 10px;
    margin-right: 29px;
  }
}

div.small_spinner {
  margin-top: 5px;
  float: right;
  background: image-url('small_spinner.gif') no-repeat center center;
  height: 20px;
  margin-top: 5px;
  width: 20px;
}

// favorites

a.add_to_favorites, a.favorited {
  text-indent: -9999px;
  position: absolute;
  right: 15px;
  margin-top: 13px;
  z-index: 2;
  display: block;
  width: 29px;
  height: 25px;
  background: image-url('icons/favorites.png') no-repeat -29px 0px;
  opacity: 0.55;
  &:hover {
    background-position: -29px 0px;
    opacity: 0.999;
  }
  &.favorited {
    background-position: 0px 0px;
    opacity: 0.99;
    &:hover {
      background-position: -58px 0px;
    }
  }
}

// misc

#welcome {
  @include background-image(linear-gradient(#F7F7F7, #C7C8C7));
  padding-top: 20px;
  padding-left: 26px;
  width: 830px;
  height: 153px;
  img {
    position: absolute;
    top: 140px;
    left: 490px;
  }
  .welcome_to_alonetone {
    color: #37392b;
    font-weight: bold;
    font-size: 30px;
    font-family: $header_font;
  }
  .welcome_alonetone {
    color: $orange;
    letter-spacing: 1.1px;
  }
  .a_damn_fine_home {
    margin-bottom: 40px;
    color: #7d7f76;
    font-size: 18px;
    font-family: $header_font;
  }  
}

#user_home {
  position: relative;
  min-height: 40px;
}

.additional_options {
  float: right;
  margin-top: 4px;
  height: 35px;
}

.additional_options_solo {
  position: relative;
  text-align: left;
  margin-bottom: 10px;
  height: 35px;
}

.visit_us {
  h1 {
    font-size: 24px;
  }
  .chunk {
    padding-top: 20px;
    float: left;
    width: 270px;
    text-align: center;
    a {
      img {
        margin-bottom: 5px;
      }
    }
  }
}

#map {
  width: 890px;
  height: 600px;
  margin-top: -40px;
  margin-left: -20px;
  background: transparent image-url('facebox/loading.gif') no-repeat center center;
  background-color: $playlist_box_silver;
  p,a,a:visited {
    color: $text_color;
  }
  #iwsw {
    img {
      float: left;
      padding-right: 10px;
      padding-bottom: 10px;
    }
  }
}

// needed for IE7 not to fuck up the animation
#pic_upload {
  height: 50px;
}

.feature {
  width: 420px;
  margin-bottom: 30px;
  div.box {
    background-color: #e1e2e1;
    padding-left: 25px;
    padding-top: 9px;
    margin-bottom: 1px;
    min-height: 30px;
    h2,h1 {
      font-weight: normal;
      font-size: 20px;
      line-height: 20px;
      padding-right: 40px;
      text-shadow: rgba(255, 249, 208, 0.43) 2px 2px 1px;
      color: $text_color;
      margin: 0;
      a {
        font-size: 20px;
        font-weight: bold;
        color: $text_color;
        text-indent: 25px;
        margin-bottom: 3px;
        text-shadow: rgba(255, 249, 208, 0.43) 2px 2px 1px;
      }
    }
    h3 {
      font-weight: normal;
      font-size: 12px;
      margin: 0;
      padding: 0;
      padding-bottom: 8px;
      color: $text_color;
      a {
        font-size: 11px;
        text-decoration: underline;
      }
    }
  }
  .static_content {
    h3 {
      font-weight: bold;
      margin-bottom: 10px;
    }
    a {
      color: $text_color;
    }
  }
  div.details {
    position: relative;
    display: block;
    background: image-url('backgrounds/album.png') repeat-x top left;
    background-color: $playlist_box_silver;
    div.pic {
      float: left;
      width: 135px;
      height: 125px;
      margin-right: 10px;
    }
    div.link {
      height: 22px;
      clear: both;
    }
    div.feature_teaser {
      padding-top: 15px;
      padding-right: 15px;
      color: $text_color;
      font-size: 14px;
      line-height: 16px;
    }
  }
}

.feature_stats {
  padding: 0px;
  margin: 0px;
  .static_content {
    padding: 0px;
    margin: 0px;
    .pic {
      width: 200px;
      height: 200px;
      float: left;
      padding-right: 10px;
    }
    .stats {
      padding-top: 25px;
      font-size: 12px;
      line-height: 18px;
      padding-right: 10px;
      a {
        font-size: 12px;
        line-height: 18px;
      }
    }
  }
}

.indented_comments {
  margin-left: 50px;
}

h1 span#channel_name {
  color: $orange;
}
/* ... */

